# hannu-python

./: pyproject.toml
hannu_python/: fifth_input.json  fourth_input.json  input.json  main.py  old_output.json  output.json  third_input.json
hannu_python/inputs/: 1.json  4.json  5.json
hannu_python/outputs/: 1.json  2.json  2_1.json  2_2.json  3.json  4.json  5.json
