[tool.poetry]
name = "hannu-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hannu_python"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"

[tool.poetry.scripts]
my-script = "hannu_python:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
